Unify Airtel and MTN execution, recovery and merchant controls
Publish the verified mobile-money readiness implementation from local
commit cb6ab92479d6063e701b49b2980b8d4e4bf36d71 through the GitHub app.
The complete tree is identical to the tested local snapshot.

Covers durable execution, verified settlement, callbacks, idempotency,
credential workflow, treasury, batches, refunds and sandbox isolation.